# tradelang

./: .gitignore  AGENTS.md  CLI-OPTIMIZATION.md  Cargo.toml  Dockerfile.docs  Dockerfile.ide  LICENSE  Makefile  PALMSCRIPT_REFERENCE.md  README.md  TRADELANG_REFERENCE.md  mkdocs.yml  requirements-docs.txt
.github/workflows/: docs.yml  publish-vscode-extension.yml
apps/ide-server/: Cargo.toml
apps/ide-server/src/: browser_ide.rs  main.rs
cli/: args.rs  commands.rs  data.rs  diagnostics.rs  format.rs
crates/palmscript/: Cargo.toml
crates/palmscript/examples/: README.md
crates/palmscript/examples/strategies/: adaptive_trend_backtest.ps  bybit_usdt_perps_backtest.ps  gate_usdt_perps_backtest.ps  indicator_showcase.ps  multi_strategy_backtest.ps  portfolio_caps_backtest.ps  risk_controls_backtest.ps  risk_sized_entry_backtest.ps  strategy.ps  trigger_happy.ps  usdm_long_short_backtest.ps  venue_orders_backtest.ps
crates/palmscript/examples/strategies/experimental/: ada_usdm_regime_scalper.ps  strategy_stale_fallback_long.ps  xrp_usdm_mean_reversion.ps  xrp_usdm_regime_reversion.ps
crates/palmscript/src/: ast.rs  builtins.rs  bytecode.rs  compiler.rs  ide.rs  ide_lsp.rs  interval.rs  ledger.rs  lexer.rs  lib.rs  order.rs  parser.rs  runtime.rs  token.rs  types.rs  vm.rs
crates/palmscript/src/backtest/: bridge.rs  engine.rs  mod.rs  optimize.rs  orders.rs  overfitting.rs  walk_forward.rs
crates/palmscript/src/backtest/diagnostics/: accumulator.rs  analysis.rs  events.rs  mod.rs
crates/palmscript/src/backtest/venue/: binance.rs  bybit.rs  common.rs  gate.rs  mod.rs
crates/palmscript/src/exchange/: cache.rs  common.rs  mod.rs
crates/palmscript/src/exchange/binance/: mod.rs  spot.rs  usdm.rs
crates/palmscript/src/exchange/bybit/: mod.rs  spot.rs  usdt_perps.rs
crates/palmscript/src/exchange/gate/: mod.rs  spot.rs  usdt_perps.rs
crates/palmscript/src/execution/: daemon.rs  engine.rs  feed_hub.rs  market_data.rs  mod.rs  paper.rs  state.rs
crates/palmscript/src/execution/venue/: binance.rs  bybit.rs  gate.rs  mod.rs
crates/palmscript/src/indicators/: channels.rs  directional.rs  event.rs  mod.rs  statistics.rs  volume.rs
crates/palmscript/tests/: backtest.rs  diagnostics_compile.rs  diagnostics_market.rs  docs_examples.rs  execution.rs  golden.rs  lexer.rs  optimize.rs  parser.rs  vm.rs  walk_forward.rs
crates/palmscript/tests/support/: mod.rs
docker/: docs-nginx.conf
docs/: index.md
docs-private/reference/: cli.md
docs-private/tooling/: browser-ide.md  cli.md
docs/contributing/: architecture.md  documentation.md  releases.md  testing.md
docs/examples/: cli-strategies.md  composition.md  multi-interval.md  rust-examples.md
docs/getting-started/: first-strategy.md  installation.md  overview.md  quickstart.md
docs/internals/: rust-examples.md
docs/javascripts/: header-home.js
docs/language/: builtins.md  composition.md  execution-model.md  expressions-control-flow.md  functions.md  intervals.md  outputs.md  syntax.md  types-values.md
docs/learn/: first-strategy.md  installation.md  language-overview.md  overview.md  quickstart.md
docs/reference/: builtins.md  cli.md  declarations-and-scope.md  diagnostics.md  glossary.md  grammar.md  indicators-momentum-volume-volatility.md  indicators-trend-and-overlap.md  indicators.md  intervals-and-sources.md  intervals.md  outputs.md  overview.md  ta-lib.md  types-and-values.md
docs/runtime/: bytecode.md  compiler-pipeline.md  csv-mode.md  history-memory.md  pipeline-runtime.md  vm.md
examples/: README.md  binance_multi_strategy_backtest.rs  monthly_trend.rs  multi_interval.rs  pipeline.rs  rsi.rs  sma.rs  step_engine.rs
ide-wasm/: Cargo.toml  index.html
ide-wasm/src/: lib.rs  main.rs
ide-web/: app.js  index.html  style.css
lsp/: convert.rs  main.rs  server.rs  session.rs
scripts/: build_ide_wasm.sh
src/: ast.rs  backtest.rs  browser_ide.rs  builtins.rs  bytecode.rs  compiler.rs  diagnostic.rs  exchange.rs  ide.rs  ide_lsp.rs  interval.rs  lexer.rs  lib.rs  order.rs  output.rs  parser.rs  pipeline.rs  position.rs  runtime.rs  span.rs  talib.rs  talib_generated.rs  token.rs  types.rs  vm.rs
tests/: backtest.rs  cli.rs  diagnostics_compile.rs  diagnostics_market.rs  docs_examples.rs  golden.rs  lexer.rs  optimize.rs  parser.rs  pipeline.rs  vm.rs  walk_forward.rs
tools/: generate_talib_fixtures.py  sync_talib_metadata.py
(+245 files in other folders)
