[package]
name = "palmscript"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "palmscript"
path = "cli/main.rs"

[[bin]]
name = "palmscript-lsp"
path = "lsp/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
lsp-server = "0.7"
lsp-types = "0.97"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
