[package]
name = "palmscript"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "palmscript"
path = "cli/main.rs"

[[bin]]
name = "palmscript-lsp"
path = "lsp/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
lsp-server = "0.7"
lsp-types = "0.97"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
mockito = "1.7"
predicates = "3.1"
tempfile = "3.13"
