[package]
name = "palmscript-ide-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo-net = "0.6"
iced = { version = "0.14.0", default-features = false, features = ["canvas", "fira-sans", "thread-pool", "web-colors", "webgl", "wgpu", "x11", "wayland"] }
iced_core = "0.14.0"
iced_aw = { version = "0.13.1", default-features = false, features = ["date_picker", "drop_down"] }
js-sys = "=0.3.85"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "=0.2.108"
wasm-bindgen-futures = "=0.4.58"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "=0.3.85", features = ["Clipboard", "Crypto", "Navigator", "Window", "console"] }
