[package]
name = "palmscript-ide-server-app"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "palmscript-ide-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["http1", "json", "tokio", "ws"] }
futures-util = "0.3"
lsp-server = "0.7"
palmscript = { path = "../../crates/palmscript" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
axum = { version = "0.8", features = ["http1", "json", "tokio", "ws"] }
http-body-util = "0.1"
tempfile = "3.13"
tower = "0.5"
